--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "start": "node server/server.js"
   },
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.18.2",
     "concurrently": "^3.5.1",
     "express": "^4.16.2",
