--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "lodash": "^4.17.4",
     "mongodb": "^2.2.33",
     "mongoose": "^4.13.5",
+    "react-rater": "^0.4.8",
     "socket.io": "^2.0.4",
     "validator": "^9.1.2"
   }
