--- a/client/package.json
+++ b/client/package.json
@@ -2,7 +2,7 @@
   "name": "client",
   "version": "0.1.0",
   "private": true,
-  "homepage": ".",
+  "homepage": "https://chowster.glitch.me/",
   "dependencies": {
     "axios": "^0.17.1",
     "react": "^16.2.0",
