--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
   "version": "1.0.0",
   "main": "index.js",
   "license": "MIT",
-  "engines" : { "node" : "8.7.0" },
+  "engines": {
+    "node": "8.7.0"
+  },
   "scripts": {
     "client": "npm run start --prefix client",
     "dev": "concurrently \"npm run server\" \"npm run client\"",
@@ -20,6 +22,7 @@
     "mongodb": "^2.2.33",
     "mongoose": "^4.13.5",
     "react-rater": "^0.4.8",
+    "redux-form": "^7.2.0",
     "validator": "^9.1.2"
   }
 }
