--- a/client/package.json
+++ b/client/package.json
@@ -7,11 +7,13 @@
     "axios": "^0.17.1",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
+    "react-rater": "^0.4.8",
     "react-redux": "^5.0.6",
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.0.17",
     "redux": "^3.7.2",
-    "redux-api-middleware": "^2.0.1"
+    "redux-api-middleware": "^2.0.1",
+    "redux-form": "^7.2.0"
   },
   "scripts": {
     "start": "react-scripts start",
