--- a/client/package.json
+++ b/client/package.json
@@ -5,6 +5,7 @@
   "homepage": "https://chowster.glitch.me/",
   "dependencies": {
     "axios": "^0.17.1",
+    "moment": "^2.20.1",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-rater": "^0.4.8",
