--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
   "scripts": {
     "client": "npm run start --prefix client",
     "dev": "concurrently \"npm run server\" \"npm run client\"",
-    "server": "nodemon server/server.js",
-    "start": "node server/server.js"
+    "server": "nodemon server/index.js",
+    "start": "node server/index.js"
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
