--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "scripts": {
     "client": "npm run start --prefix client",
     "dev": "concurrently \"npm run server\" \"npm run client\"",
+    "format": "prettier --write \"**/*.js\"",
     "server": "nodemon server/index.js",
     "start": "node server/index.js"
   },
@@ -21,5 +22,8 @@
     "lodash": "^4.17.4",
     "mongoose": "^5.0.17",
     "validator": "^10.1.0"
+  },
+  "devDependencies": {
+    "prettier": "^1.12.1"
   }
 }
