--- a/client/package.json
+++ b/client/package.json
@@ -5,6 +5,8 @@
   "homepage": "https://chowster.glitch.me/",
   "dependencies": {
     "axios": "^0.18.0",
+    "bootstrap": "^4.1.1",
+    "jquery": "^3.3.1",
     "moment": "^2.22.1",
     "react": "^16.3.2",
     "react-dom": "^16.3.2",
