--- a/client/package.json
+++ b/client/package.json
@@ -4,11 +4,13 @@
   "private": true,
   "homepage": "https://chowster.glitch.me/",
   "dependencies": {
+    "apollo-client": "^2.3.2",
     "axios": "^0.18.0",
     "bootstrap": "^4.1.1",
     "jquery": "^3.3.1",
     "moment": "^2.22.1",
     "react": "^16.3.2",
+    "react-apollo": "^2.1.4",
     "react-dom": "^16.3.2",
     "react-rater": "^0.4.8",
     "react-redux": "^5.0.7",
