--- a/client/package.json
+++ b/client/package.json
@@ -4,9 +4,10 @@
   "private": true,
   "homepage": "https://chowster.glitch.me/",
   "dependencies": {
-    "apollo-client": "^2.3.2",
+    "apollo-boost": "^0.1.7",
     "axios": "^0.18.0",
     "bootstrap": "^4.1.1",
+    "graphql-tag": "^2.9.2",
     "jquery": "^3.3.1",
     "moment": "^2.22.1",
     "react": "^16.3.2",
