--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "jsonwebtoken": "^8.1.0",
     "lodash": "^4.17.4",
     "mongoose": "^5.1.0",
+    "mongoose-unique-validator": "^2.0.1",
     "validator": "^10.1.0"
   },
   "devDependencies": {
