--- a/client/package.json
+++ b/client/package.json
@@ -7,6 +7,7 @@
     "apollo-boost": "^0.1.7",
     "axios": "^0.18.0",
     "bootstrap": "^4.1.1",
+    "classnames": "^2.2.6",
     "graphql-tag": "^2.9.2",
     "jquery": "^3.3.1",
     "moment": "^2.22.1",
