--- a/client/package.json
+++ b/client/package.json
@@ -15,12 +15,8 @@
     "react-apollo": "^2.1.4",
     "react-dom": "^16.3.2",
     "react-rater": "^0.4.8",
-    "react-redux": "^5.0.7",
     "react-router-dom": "^4.2.2",
-    "react-scripts": "^1.1.4",
-    "redux": "^4.0.0",
-    "redux-api-middleware": "^2.3.0",
-    "redux-form": "^7.3.0"
+    "react-scripts": "^1.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -28,8 +24,5 @@
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
   },
-  "proxy": "http://localhost:3001",
-  "devDependencies": {
-    "redux-logger": "^3.0.6"
-  }
+  "proxy": "http://localhost:3001"
 }
