--- a/client/package.json
+++ b/client/package.json
@@ -11,12 +11,12 @@
     "graphql-tag": "^2.9.2",
     "jquery": "^3.3.1",
     "moment": "^2.22.1",
-    "react": "^16.3.2",
+    "react": "^16.6.3",
     "react-apollo": "^2.1.4",
-    "react-dom": "^16.3.2",
+    "react-dom": "^16.6.3",
     "react-rater": "^0.4.8",
     "react-router-dom": "^4.2.2",
-    "react-scripts": "^1.1.4"
+    "react-scripts": "^2.1.1"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -24,5 +24,11 @@
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
   },
-  "proxy": "http://localhost:3001"
+  "proxy": "http://localhost:3001",
+  "browserslist": [
+    ">0.2%",
+    "not dead",
+    "not ie <= 11",
+    "not op_mini all"
+  ]
 }
