--- a/client/package.json
+++ b/client/package.json
@@ -16,7 +16,7 @@
     "react-dom": "^16.6.3",
     "react-rater": "^0.4.8",
     "react-router-dom": "^4.2.2",
-    "react-scripts": "^2.1.1"
+    "react-scripts": "3.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
