--- a/client/package.json
+++ b/client/package.json
@@ -4,18 +4,18 @@
   "private": true,
   "homepage": "https://chowster.glitch.me/",
   "dependencies": {
-    "apollo-boost": "^0.1.7",
-    "axios": "^0.18.0",
+    "apollo-boost": "^0.4.3",
+    "axios": "^0.19.0",
     "bootstrap": "^4.1.1",
     "classnames": "^2.2.6",
-    "graphql-tag": "^2.9.2",
+    "graphql": "^14.4.2",
     "jquery": "^3.3.1",
     "moment": "^2.22.1",
     "react": "^16.6.3",
     "react-apollo": "^2.1.4",
     "react-dom": "^16.6.3",
-    "react-rater": "^0.4.8",
-    "react-router-dom": "^4.2.2",
+    "react-rater": "^5.1.0",
+    "react-router-dom": "^5.0.1",
     "react-scripts": "3.0.1"
   },
   "scripts": {
