--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "index.js",
   "license": "MIT",
   "engines": {
-    "node": "^8.7.0"
+    "node": ">=8.7.0"
   },
   "scripts": {
     "client": "npm run start --prefix client",
@@ -16,18 +16,18 @@
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
-    "body-parser": "^1.18.2",
-    "concurrently": "^3.5.1",
-    "express": "^4.16.2",
-    "express-graphql": "^0.6.12",
-    "graphql": "^0.13.2",
-    "jsonwebtoken": "^8.1.0",
-    "lodash": "^4.17.11",
-    "mongoose": "^5.1.0",
-    "mongoose-unique-validator": "^2.0.1",
-    "validator": "^10.1.0"
+    "body-parser": "^1.19.0",
+    "concurrently": "^4.1.1",
+    "express": "^4.17.1",
+    "express-graphql": "^0.9.0",
+    "graphql": "^14.4.2",
+    "jsonwebtoken": "^8.5.1",
+    "lodash": "^4.17.15",
+    "mongoose": "^5.6.6",
+    "mongoose-unique-validator": "^2.0.3",
+    "validator": "^11.1.0"
   },
   "devDependencies": {
-    "prettier": "^1.12.1"
+    "prettier": "^1.18.2"
   }
 }
