--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
     "graphql": "^14.4.2",
     "jquery": "^3.3.1",
     "moment": "^2.22.1",
+    "node-sass": "^4.12.0",
     "react": "^16.6.3",
     "react-apollo": "^2.1.4",
     "react-dom": "^16.6.3",
