--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
     "validator": "^11.1.0"
   },
   "devDependencies": {
+    "eslint": "^6.1.0",
+    "eslint-plugin-react": "^7.14.3",
     "prettier": "^1.18.2"
   }
 }
