--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "start": "node server/index.js"
   },
   "dependencies": {
+    "@sendgrid/mail": "6.3.1",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
     "concurrently": "^4.1.1",
