Added env-cmd package

--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "validator": "^11.1.0"
   },
   "devDependencies": {
+    "env-cmd": "8.0.2",
     "eslint-plugin-react": "^7.14.3",
     "prettier": "^1.18.2"
   }
