--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
     "jquery": "^3.3.1",
     "moment": "^2.22.1",
     "node-sass": "^4.12.0",
+    "query-string": "^6.8.2",
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
     "react-rater": "^5.1.0",
