--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "dev": "concurrently \"npm run server\" \"npm run client\"",
     "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix client && npm run build --prefix client",
     "dev-localdb": "concurrently \"mongod\" \"npm run server\" \"npm run client\"",
+    "generate:graphqlSchema": "graphql-codegen",
     "server": "env-cmd ./config/dev.env nodemon index.js",
     "start": "node index.js"
   },
@@ -28,6 +29,8 @@
     "validator": "^11.1.0"
   },
   "devDependencies": {
+    "@graphql-codegen/cli": "^1.6.1",
+    "@graphql-codegen/fragment-matcher": "^1.6.1",
     "env-cmd": "8.0.2",
     "eslint-plugin-react": "^7.14.3",
     "prettier": "^1.18.2"
