--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "generate:graphqlSchema": "graphql-codegen",
     "server": "env-cmd ./config/dev.env nodemon index.js",
     "start": "node index.js",
-    "test": "env-cmd ./config/test.env jest --watch"
+    "test": "env-cmd ./config/test.env jest --watch --runInBand"
   },
   "jest": {
     "testEnvironment": "node"
