--- a/server/package.json
+++ b/server/package.json
@@ -22,7 +22,6 @@
     "express-graphql": "^0.9.0",
     "graphql": "^14.4.2",
     "jsonwebtoken": "^8.5.1",
-    "lodash": "^4.17.15",
     "mongoose": "^5.6.6",
     "mongoose-unique-validator": "^2.0.3",
     "validator": "^11.1.0"
@@ -31,6 +30,7 @@
     "@graphql-codegen/cli": "^1.6.1",
     "@graphql-codegen/fragment-matcher": "^1.6.1",
     "env-cmd": "8.0.2",
+    "eslint": "^6.5.1",
     "eslint-plugin-jest": "^22.16.0",
     "eslint-plugin-react": "^7.14.3",
     "jest": "^24.9.0",
