--- a/client/package.json
+++ b/client/package.json
@@ -31,5 +31,8 @@
     "not dead",
     "not ie <= 11",
     "not op_mini all"
-  ]
+  ],
+  "devDependencies": {
+    "@testing-library/react": "^9.2.0"
+  }
 }
