--- a/server/package.json
+++ b/server/package.json
@@ -8,7 +8,7 @@
   },
   "scripts": {
     "generate:graphqlSchema": "graphql-codegen",
-    "server": "env-cmd ./config/dev.env nodemon index.js",
+    "server": "env-cmd -f ./config/dev.env nodemon index.js",
     "start": "node index.js",
     "test": "env-cmd ./config/test.env jest --watch --runInBand"
   },
